tests/ui/imports/issue-114682-6.stderr
error: `log` is ambiguous
  --> $DIR/issue-114682-6.rs:9:9
   |
LL |     let log = 2;
   |         ^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `log` could refer to the function defined here
  --> $DIR/auxiliary/issue-114682-6-extern.rs:8:9
   |
LL | pub use self::a::*;
   |         ^^^^^^^
note: `log` could also refer to the function defined here
  --> $DIR/auxiliary/issue-114682-6-extern.rs:9:9
   |
LL | pub use self::b::*;
   |         ^^^^^^^
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `log` is ambiguous
  --> $DIR/issue-114682-6.rs:9:9
   |
LL |     let log = 2;
   |         ^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `log` could refer to the function defined here
  --> $DIR/auxiliary/issue-114682-6-extern.rs:8:9
   |
LL | pub use self::a::*;
   |         ^^^^^^^
note: `log` could also refer to the function defined here
  --> $DIR/auxiliary/issue-114682-6-extern.rs:9:9
   |
LL | pub use self::b::*;
   |         ^^^^^^^
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

